@@ -1,0 +1,60 @@
+<?php
+
+$_lang['modmonitor'] = "modMonitor";
+$_lang['modmonitor_desc'] = "Monitoring Site Performance";
+
+$_lang['modmonitor_requests_detailed'] = "Request to site";
+$_lang['modmonitor_requests_detailed_desc'] = "Detailed view";
+
+$_lang['modmonitor_requests_items'] = "Elements";
+$_lang['modmonitor_requests_items_desc'] = "All caused elements";
+
+$_lang['modmonitor.parent'] = 'Parent';
+$_lang['modmonitor.request_id'] = 'ID request';
+$_lang['modmonitor.element'] = 'Element';
+$_lang['modmonitor.name'] = 'Item name';
+$_lang['modmonitor.properties'] = 'Options';
+$_lang['modmonitor.time'] = 'Total Time';
+$_lang['modmonitor.db_queries'] = 'Queries to database';
+$_lang['modmonitor.db_queries_time'] = 'Time requests to database';
+$_lang['modmonitor.php_memory'] = 'Memory Used';
+$_lang['modmonitor.group_elements'] = 'Group elements';
+$_lang['modmonitor.err_request'] = 'Error executing query';
+$_lang['modmonitor.query'] = 'Address or ID. % - all characters, _ - one';
+$_lang['modmonitor.status'] = 'Response code';
+$_lang['modmonitor.time'] = 'Time';
+
+$_lang['modmonitor.from_cache'] = 'Cache';
+$_lang['modmonitor.from_cache_all'] = 'All';
+$_lang['modmonitor.from_cache_1'] = 'From cache';
+$_lang['modmonitor.from_cache_2'] = 'Not from cache';
+
+$_lang['modmonitor.context'] = 'Context';
+$_lang['modmonitor.php_error'] = 'Error code';
+$_lang['modmonitor.search'] = 'Search';
+$_lang['modmonitor.clear'] = 'Reset';
+$_lang['modmonitor.truncate_stat'] = 'Delete';
+$_lang['modmonitor.truncate_confirm'] = 'Delete all the statistics? It irrevocably.';
+$_lang['modmonitor.context_key'] = 'Context';
+$_lang['modmonitor.url'] = 'Address';
+$_lang['modmonitor.auth_from_name'] = 'Auth from name ';
+$_lang['modmonitor.date'] = 'Date';
+$_lang['modmonitor.resource_id'] = 'Document ID';
+$_lang['modmonitor.user_id'] = 'User';
+$_lang['modmonitor.http_status'] = 'Response code';
+$_lang['modmonitor.php_error'] = 'php error';
+$_lang['modmonitor.time'] = 'Execution time';
+$_lang['modmonitor.php_memory'] = 'Used memory MB';
+$_lang['modmonitor.db_queries'] = 'Queries to database';
+$_lang['modmonitor.db_queries_time'] = 'Time requests to database';
+$_lang['modmonitor.unable_parse_data'] = 'Failed to parse data';
+$_lang['modmonitor.err_descr'] = 'Error description';
+$_lang['modmonitor.err_descr_msg'] = 'Error';
+$_lang['modmonitor.err_descr_file'] = 'File';
+$_lang['modmonitor.err_descr_line'] = 'Line';
+
+$_lang['modmonitor.clear_data_success'] = 'Data has been successfully cleared';
+
+
+$_lang['modmonitor.search_statistics'] = 'Query statistics';
+$_lang['modmonitor.called_elements'] = 'invoked elements';
