@@ -9,3 +9,52 @@ $_lang['modmonitor_requests_detailed_desc'] = "Детальный просмот
 $_lang['modmonitor_requests_items'] = "Элементы";
 $_lang['modmonitor_requests_items_desc'] = "Все вызываемые элементы";
 
+$_lang['modmonitor.parent'] = 'Родитель';
+$_lang['modmonitor.request_id'] = 'ID запроса';
+$_lang['modmonitor.element'] = 'Элемент';
+$_lang['modmonitor.name'] = 'Имя элемента';
+$_lang['modmonitor.properties'] = 'Свойства';
+$_lang['modmonitor.time'] = 'Общее время';
+$_lang['modmonitor.db_queries'] = 'Запросов к БД';
+$_lang['modmonitor.db_queries_time'] = 'Время запросов к БД';
+$_lang['modmonitor.php_memory'] = 'Использовано памяти';
+$_lang['modmonitor.group_elements'] = 'Группировать элементы';
+$_lang['modmonitor.err_request'] = 'Ошибка выполнения запроса';
+$_lang['modmonitor.query'] = 'Адрес или ID. % - все символы, _ - один';
+$_lang['modmonitor.status'] = 'Код ответа';
+$_lang['modmonitor.time'] = 'Время';
+
+$_lang['modmonitor.from_cache'] = 'Кеш';
+$_lang['modmonitor.from_cache_all'] = 'Все';
+$_lang['modmonitor.from_cache_1'] = 'Из кеша';
+$_lang['modmonitor.from_cache_2'] = 'Не из кеша';
+
+$_lang['modmonitor.context'] = 'Контекст';
+$_lang['modmonitor.php_error'] = 'Код ошибки';
+$_lang['modmonitor.search'] = 'Найти';
+$_lang['modmonitor.clear'] = 'Сброс';
+$_lang['modmonitor.truncate_stat'] = 'Очистить';
+$_lang['modmonitor.truncate_confirm'] = 'Удалить всю статистику? Это безвозвратно.';
+$_lang['modmonitor.context_key'] = 'Контекст';
+$_lang['modmonitor.url'] = 'Адрес';
+$_lang['modmonitor.auth_from_name'] = 'Авторизоваться от имени ';
+$_lang['modmonitor.date'] = 'Дата';
+$_lang['modmonitor.resource_id'] = 'ID документа';
+$_lang['modmonitor.user_id'] = 'Пользователь';
+$_lang['modmonitor.http_status'] = 'Код ответа';
+$_lang['modmonitor.php_error'] = 'php ошибка';
+$_lang['modmonitor.time'] = 'Время выполнения';
+$_lang['modmonitor.php_memory'] = 'Использовано памяти Мб';
+$_lang['modmonitor.db_queries'] = 'Запросов к БД';
+$_lang['modmonitor.db_queries_time'] = 'Время запросов к БД';
+$_lang['modmonitor.unable_parse_data'] = 'Не удалось разобрать данные';
+$_lang['modmonitor.err_descr'] = 'Описание ошибки';
+$_lang['modmonitor.err_descr_msg'] = 'Ошибка';
+$_lang['modmonitor.err_descr_file'] = 'Файл';
+$_lang['modmonitor.err_descr_line'] = 'Строка';
+
+$_lang['modmonitor.clear_data_success'] = 'Данные успешно очищены';
+
+
+$_lang['modmonitor.search_statistics'] = 'Статистика запросов';
+$_lang['modmonitor.called_elements'] = 'Вызываемые элементы';
